Sat Aug 14 21:49:48 PDT 2004 William Brack <wbrack@mmm.comlhk>

	* libxslt/namespaces.[ch], transform.c, xslt.c, xsltInternals.h:
	  fixed handling of #default in namespace-alias for default
	  namespace (bug 149659)
	* tests/namespaces/tst7.* tst8.*: added regression tests for above

Fri Aug  6 11:05:31 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: added date:sum routine supplied by Joel
	  Reed

Wed Aug  4 00:04:13 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/downloads.html doc/xslt.html: fixed a couple of problems
	  reported by Oliver Stoeneberg
		
Mon Aug  2 08:48:03 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/documents.c, libxslt/functions.c, libxslt/transform.c,
	  libxslt/variables.c: added code to assure keys are generated
	  when needed for node-sets (bug 148773)
	* tests/exslt/common/node-set.7.* - added test case for above.

Mon Jul 26 17:03:22 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/strings.c: fixed str:tokenize for case when 2nd
	  argument is an empty string (should produce a token for
	  each char in the string).  Reported on the mailing list by
	  Peter Pawlowski.

Fri Jul 23 21:55:14 PDT 2004 William Brack <wbrack@mmm.com.hk>
	* libxslt/imports.c: further enhancement for template priorities
	  on imported stylesheets (better fix for bug 141279, fixes
	  bug 148246).

Fri Jul 16 12:14:57 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in libexslt/crypto.c libexslt/exslt.[ch] 
	  libexslt/exsltconfig.h.in win32/configure.js: apply patch from
	  Rob Richards to add a normal --with-crypto configure option.

Tue Jul 13 22:57:43 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/functions.c: added some logic to xsltKeyFunction
	  to set the transform context doc ptr when the xpath context
	  doc is different (bug 147445)
	* tests/exslt/common/Makefile.am, tests/exslt/common/node-set.5*
	  and tests/exslt/common/node-set.6*: added regression tests